--- a/README
+++ b/README
@@ -2,5 +2,5 @@ This is a simple cron notation parser. Returns the
 nearest timestamp matching given criteria that is
 greater than given timestamp (current time() by defualt)
  
-Eg.:   $timestamp = Crontab::parse('12 * * * [1-5]');
+Eg.:   $timestamp = Crontab::parse('12 * * * 1-5');
 
